2023-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use CPPFLAGS delivered by pkg-config for
	libheif. Applied patch
	configure-libheif-cppflags-deduplicated2.patch from SourceForge
	patch #79 "Use CPPFLAGS delivered by pkg-config".

	* coders/tiff.c (WriteTIFFImage): Call TIFFFlush() to detect any
	errors which might otherwise be lost by TIFFClose().  Restore
	broken file deletion code.

2023-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c, tests/rwblob.c: Print reproducible test
	information.

2023-11-13  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Sumate and display total amount
	of problems during testing.

2023-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c, magick/blob.c: Add support for a per-file
	write limit.  This imposes a limit on the number of uncompressed
	bytes written.  The behavior when the limit is hit is similar to
	an unexpected write error, as if the disk is full.
	* coders/: Updated the many coders to behave correctly when faced
	with an unexpected write error.
	* magick/blob.c: If the write limit is hit, then the truncated
	output file is automatically removed.

2023-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/delegates.mgk.in, VisualMagick/bin/delegates.mgk:
	Re-direct Ghostscript stdout to stderr to avoid output corruption
	when GM stdout is redirected to a file.  Addresses SourceForge
	issue #729 "GhostScript warnings in files on stdout".

2023-11-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/jnx.c JNX decoder is also vulnerable against size injection.

2023-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (RGBTransformImage): Move cast in
	primary_info.x and primary_info.y calcuation.  Addresses concern
	expressed in SourceForge issue #730 "Recent colorspace conversion
	change".

2023-11-07  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c Revert